Actualización completa: cambios en controladores, servicios y vistas